--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,60 @@
 .App {
   text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  width: 100%;
   display: flex;
   flex-direction: column;
   align-items: center;
+}
+#root {
+  width: 100%;
+}
+html {
+  height: 100%;
+}
+body {
+  height: 100%;
+  background-image: url("./bg/background.webp");
+  background-repeat: no-repeat;
+  background-size: cover;
+  
+}
+.cardsContainer {
+  display: flex;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  flex-wrap: wrap;
+  max-width: 1200px;
+
+  gap: 20px;
+ 
+}
+.card {
+  border: 3px solid black;
+  border-radius: 8px;
+  width: 150px;
+  height: 200px;
+  cursor: pointer;
+  background-color: rgb(0, 104, 31);
+  
+}
+.header {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 50px;
+  width: 100%;
+}
+.title {
+  font-size: 32px;
+  margin-left: 15%;
+}
+.scoreboard {
+  margin-right: 15%;
+}
+.character {
+  max-width: 100%;
+  max-height: 100%;
+}
+.card:hover {
+  background-color: rgb(0, 204, 0);
+  transition: .5s;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
